# email_forwarder

./: .gitignore  Cargo.toml  config.toml
src/: app.rs  config.rs  main.rs
