[package]
name = "email_forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
imap = "2.4.1"
lettre = "0.10.4"
serde = { version = "1.0.170", features = ["derive"] }
toml = "0.7.6"
